--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ meets contemporary sophistication.&nbsp;&nbsp;</p>
             <!-- VIDEO GALLERYSSSSSS -->
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
               <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#u99PHwrJMc-modal" data-bs-target="#u99PHwrJMc-modal">
-                  <video class="w-100" autoplay controls muted>
+                  <video class="w-100" controls muted>
                     <source src="assets/vid/274262975-148573267590467-1226065469135155566-n-816x612.mp4" type="video/mp4">
                   </video>
                   <!-- <div class="icon-wrapper">
@@ -215,7 +215,7 @@ meets contemporary sophistication.&nbsp;&nbsp;</p>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#u99PHwrJMc-modal" data-bs-target="#u99PHwrJMc-modal">
-              <video class="w-100" autoplay controls muted>
+              <video class="w-100" controls muted>
                 <source src="assets/vid/vid2.mp4" type="video/mp4">
               </video>
               <!-- <div class="icon-wrapper">
@@ -226,7 +226,7 @@ meets contemporary sophistication.&nbsp;&nbsp;</p>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#u99PHwrJMc-modal" data-bs-target="#u99PHwrJMc-modal">
-              <video class="w-100" autoplay controls muted>
+              <video class="w-100" controls muted>
                 <source src="assets/vid/vid3.mp4" type="video/mp4">
               </video>
               <!-- <div class="icon-wrapper">
@@ -237,7 +237,7 @@ meets contemporary sophistication.&nbsp;&nbsp;</p>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#u99PHwrJMc-modal" data-bs-target="#u99PHwrJMc-modal">
-              <video class="w-100" autoplay controls muted>
+              <video class="w-100" controls muted>
                 <source src="assets/vid/vid4.mp4" type="video/mp4">
               </video>
               <!-- <div class="icon-wrapper">
